EWebDAVSession: Ignore text/plain server responses on success
When trying to modify a contact from an iCloud message, Evolution replies with a:
Cannot modify contacts: Failed to put data: HTTP error code 201 (Created): Created
The contact is modified but evolution does not acknowledge it. Eventually the modifications will appear once the iCloud address book gets an update.
Configuration:
Evolution 3.36.2
Kernel 5.6.10-3-MANJARO
Below is the "HTTP/1.1 201 Created" message from evolution-addressbook-factory generated when replicating the above behavior.
< HTTP/1.1 201 Created
< Soup-Debug-Timestamp: 1589217008
< Soup-Debug: SoupMessage 6 (0x7f99200093a0)
< Server: AppleHttpServer/ac9d40131a4d
< Date: Mon, 11 May 2020 17:10:08 GMT
< Content-Type: text/plain; charset=UTF-8
< Content-Length: 27
< Connection: close
< X-Apple-Jingle-Correlation-Key: GOPQI2TAKBA47OTWAHF4JSL7NM
< apple-seq: 0
< apple-tk: false
< Apple-Originating-System: UnknownOriginatingSystem
< X-Responding-Instance: carddav:34201001:mr26p42ic-ztdg05092101:8001:2007B427:89f835111c10
< ETag: "k7cqg7s3"
< Content-Encoding: gzip
< Strict-Transport-Security: max-age=31536000; includeSubDomains;
< via: xrail:mr90p00ic-zteu08151101.me.com:8301:19C402:grp23,631194250daa17e24277dea86cf30319:21fd99d26c84fc542cb1d8360fb7773c:Minneapolis
< X-Apple-Request-UUID: 339f046a-6050-41cf-ba76-01cbc4c97f6b
< access-control-expose-headers: X-Apple-Request-UUID,Via
<
Best regards, Paulo
Edited by Milan Crha