I#212 - EWebDAVSession: Ignore text/plain server responses on success

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/212